Added Nutrition Facts

--- a/recipes/Thieboudjeun.html
+++ b/recipes/Thieboudjeun.html
@@ -94,6 +94,16 @@
         <li>At the 15 minute mark, check that the rice has absorbed the moisture and is soft. Cover and cook for another 5 minutes if it needs more time. If the water has dried up and the rice is still not soft, add in 4 tbsp of water, cover and allow to cook.</li>
         <li>Serve hot with the vegetables and fish, and lime wedges</li>
     </ol>
+    <h3>Conclusion</h3>
+    <p>This dish is quite rich and calorie dense (one of the reasons it was such a local favorite as an expensive
+         but tasty energy source), so minimal servings are definitely recommended with this senegalese jollof rice! The estimated calorie count
+          and nutritional information for one serving (meaning a plate) of Thiebou Djeun is shown below with an assumption of a total of 8 servings
+           from the ingredients above. Please note that the nutritional information below, including ingredients and calculations is sourced from a 
+           third party site and should be considered estimates. Actual nutritional content will depend on the brands used, measuring standards, 
+           portion sizes and other factors.
+    </p>
+    <img src="../recipe-images/Nutrition Facts.png" alt="Nutrition Facts">
+    
 
 
 
